2006-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.5.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	* src/htdocs/releases/gstreamer/template.xml:
	  new releases of core and base

2006-04-25  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gnonlin/0.10.3.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	Add release notes for gnonlin 0.10.3 "Birthday Cake"

2006-04-21  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gnonlin/0.10.2.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	Add release notes for gnonlin 0.10.2

2006-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/copy/releases/releases.ics:
	* src/copy/releases/releases.rss10.xml:
	* src/copy/releases/releases.rss20.xml:
	* src/htdocs/index.xsl:
	* src/htdocs/modules/modules.xml:
	* src/htdocs/releases/Makefile.am:
	  add rss and ics files for the releases, as an experiment

2006-04-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/modules/modules.xml:
	* src/htdocs/releases/gnonlin/0.10.1.xml:
	* src/htdocs/releases/gnonlin/template.xml:
	  add release notes and product info for gnonlin
	* src/htdocs/releases/releases.xsl:
	* src/htdocs/releases/text.xsl:
	  don't prefix release notes with GStreamer:

2006-04-06  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/releases/gnonlin/template.xml:
	Update gnonlin release template

2006-04-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/configure.in:
	* src/htdocs/releases/Makefile.am:
	* src/htdocs/releases/gnonlin/Makefile.am:
	* src/htdocs/releases/gnonlin/template.xml:
	  add gnonlin release template

2006-04-05  Jan Schmidt  <thaytan@mad.scientist.com>

	* HACKING: